<?xml version="1.0"?>
<package format="2">
    <name>prometheus_simulator_utils</name>
    <version>0.0.0</version>
    <description>The prometheus_simulator_utils package</description>

    <maintainer email="qiyh8@mail.sysu.edu.cn">Yuhua Qi</maintainer>

    <license>TODO</license>
 
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
      <!-- Other tools can request additional information be placed here -->
    </export>
</package>
